# spoiler_generation

./: .gitignore  README.md  pyproject.toml
notebooks/: result_analysis.ipynb
spoiler_generation/classifier/: check_clf.ipynb  prepare_data.py  run_training.sh  split_data.py  train_model.py
spoiler_generation/ensemble/: check_ensembles.ipynb  checked_output.ipynb
spoiler_generation/llms/: inference.ipynb  peft_train.py  prepare_dataset.ipynb  prepare_dataset.py  question_generation.ipynb  run_training.sh
spoiler_generation/qa_models/: hf_qa_train.py  predict.sh  predict_model.py  prepare_dataset.ipynb  prepare_dataset.py  run_qa.py  run_training.sh  trainer_qa.py  utils_qa.py
spoiler_generation/regressor/: prepare_data.py  run_training.sh  split_data.py  train_model.py
spoiler_generation/utils/: dataset_class.py  helpers.py  stats.py
