[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spoiler-generation"
description = "Simple package for master thesis. The aim is to generate spoiler for clickbait post"
version = "0.1.0"
maintainers = [{ name = "Mateusz Woźny", email = "mateusz15wozny@gmail.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",

]
dependencies = [
    "transformers~=4.29.0.dev0",
    "datasets~=2.11.0",
    "mlflow~=2.2.2",
    "evaluate~=0.4.0",
    "pandas~=1.5.3",
    "numpy~=1.23.5",
    "nltk~=3.8.1",
    "scikit-learn~=1.2.2",
    "peft~=0.2.0",
    "bitsandbytes~=0.38.0.post2",
    "accelerate~=0.18.0",
    "bert_score~=0.3.13",
    # "torch~=1.13.1",
]

[project.optional-dependencies]
notebooks = [
    "ipython~=8.6.0",
    "ipykernel~=6.17.0",
    "tqdm~=4.64.1",
    "jupyter~=1.0.0",
]
all = ["spoiler-generation[notebooks]"]


[tool.setuptools]
py-modules = ["spoiler_generation"]

[tool.black]
line-length = 140
